removing fixed width from .form-wrapper and .accordion-wrapper and adding overflow: hidden; fixed the problem whit overflowing accordion.

--- a/code/style.css
+++ b/code/style.css
@@ -67,7 +67,7 @@ h2{
 } 
 
 .form-wrapper{
-  height: 50vh;
+  /* height: 50vh; */
   min-height: 50vh;
   width: 100vw;
   margin: 0.5rem;
@@ -118,7 +118,7 @@ button:hover{
   justify-items: center;
   background-color: #fbb98a;
   width: 100vw;
-  height: 50vh;  
+  /* height: 50vh;   */
 }
   
 .faq{
